--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@heroicons/react": "^2.0.13",
     "@thirdweb-dev/react": "^3.6.3",
     "@thirdweb-dev/sdk": "^3.6.3",
+    "country-flag-icons": "^1.5.5",
     "ethers": "^5.7.2",
     "next": "latest",
     "react": "18.2.0",
     "react-countdown": "^2.3.3",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hooks-global-state": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
