--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
-    "@thirdweb-dev/react": "^3.6.3",
-    "@thirdweb-dev/sdk": "^3.6.3",
+    "@thirdweb-dev/react": "^3.6.9",
+    "@thirdweb-dev/sdk": "^3.6.9",
     "country-flag-icons": "^1.5.5",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "next": "latest",
     "nodemailer": "^6.8.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-countdown": "^2.3.3",
     "react-dom": "18.2.0",
     "react-hooks-global-state": "^2.0.0"
